# data-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEEP_TECHNICAL_ANALYSIS.md  GAPS_AND_PRIORITIES.md  GETTING_STARTED.md  Makefile  PLAN-s1-rtc-collections-alignment.md  PR_DESCRIPTION.md  PR_SUMMARY.md  QUICKSTART_E2E.md  QUICK_PRIORITY_SUMMARY.md  README.md  SECURITY.md  SPEC-s1-rtc-stac-followup.md  mypy.ini  pyproject.toml  release-please-config.json  release-please-manifest.json  submit_stac_items_notebook.ipynb  submit_test_workflow.py  submit_test_workflow_wh.py  test_e2e_payload.json  validate-setup.sh
.github/: dependabot.yml
.github/scripts/: security_check.py  security_summary.py
.github/specs/: s1_grd_STACregisration_and_argo_pipelines.md  s1_grd_phase5_plan.md  s1_grd_phase5_subissues.md
.github/workflows/: build.yml  ci.yml  cleanup_harbor_registry.py  harbor-cleanup.yml  release-please.yml  security-audit.yml  test.yml  zizmor.yml
analysis/: poc_s1_datacube_hybrid.py  s1tiling_eodag4_patch.py
aoi/: alps.txt  france.txt  pyrenees.txt
claude-docs/: SESSION_HANDOFF.md
claude-docs/plans/: fix_s1_trigger_coverage_gate.md  fix_s1tiling_output_contamination.md  historical_data_cleanup.md  issue183_design_comment_DRAFT.md  remove_237_masked_name_workaround.md  s1_caching_t1_HANDOFF.md  s1_grd_phase6_productionization.md  s1_ingest_upload_perf.md  s1_input_data_caching.md  s1_per_acquisition_render_stores.md  s1_rtc_remaining_work.md  s1tiling_empty_coverage_false_failure.md  s2_tier_standard_backlog.md  s2_tier_standard_backlog_HANDOFF.md  stac_transactions_auth.md  subissue_10_watch_cdse.md  subissue_4_end_to_end.md  subissue_7_argo_s1tiling.md  subissue_A_run_s1tiling.md  subissue_B_run_ingest_register.md  subissue_T6_trigger.md  subissues_1_2_5_3_ingest_register.md  t7_phase2_pyrenees_alps.md
claude-docs/specs/: historical_data_cleanup.md  s1_grd_STACregisration_and_argo_pipelines.md  s1_grd_phase5_subissues.md  s1_grd_phase6_productionization.md  s1_input_data_caching.md  s1_input_data_caching_schematic.md  s3_olci_pipeline_runbook.md  spike_s1tiling_platform_support.md  stac_transactions_auth.md
config/: S1GRD_RTC.cfg
deploy/: migrate-s1-rtc-datamodel-workflow.yaml  s1-caching-t8-skipseam-workflow.yaml  wipe-s1rtc-tiles-workflow.yaml
docker/: Dockerfile  Dockerfile.test  requirements-build.txt
docs/: PERFORMANCE_VALIDATION.md  S1_E2E_TEST_RESULTS.md  prometheus-metrics.md  quicklook-crs-investigation.md  s1-guide.md
docs/runbooks/: conversion-failures.md  stac-registration-errors.md
examples/: README.md  register_simple.py  s1_quickstart.py  simple_register.py  submit.py
legacy_workflows/: README.md
legacy_workflows/base/: eventsource.yaml  workflowtemplate.yaml
notebooks/: .env.example  .mypy_ignore  01_quickstart.ipynb  02_pyramid_performance.ipynb  03_multi_resolution.ipynb  README.md  operator.ipynb  operator_utils.py
operator-tools/: README.md  README_MIGRATIONS.md  README_collections.md  build_s1_rtc_collections.py  eopf-cpm-production-sentinel-2-l2a-from-cdse.ipynb  example_usage.py  manage_collections.py  manage_item.py  migrate_catalog.py  repair_stac_raster_links.py  submit_stac_items_notebook.ipynb  submit_storage_tier_workflows.py  submit_test_workflow_wh.py  submit_test_workflow_wh_list.py
operator-tools/_migrate_catalog/: __init__.py  __main__.py  cli.py  history.py  runner.py  types.py
operator-tools/codec/: README.md  check_zarr_codecs.py  run_local_conversion.py  validate_conversion.ipynb
operator-tools/example_notebooks/: change_storage_tier.ipynb  validate_s1_grd_rtc.ipynb  visualize_s3_olci_deckgl.ipynb
operator-tools/migrate_catalog/: __init__.py  cli.py  history.py  runner.py
scripts/: README_aggregate_items.md  README_change_storage_tier.md  README_cleanup_expired_items.md  README_query_storage_tier_items.md  README_storage_tier.md  README_update_storage_tier.md  S2A_MSIL2A_20250831T103701_N0511_R008_T31TFL_20250831T145420.json  S2A_MSIL2A_20250831T103701_N0511_R008_T31TFL_20250831T145420_with_alternate.json  S2A_MSIL2A_20251008T100041_N0511_R122_T32TQM_20251008T122613.szeopf.json  aggregate_items.py  augment_stac_item.py  benchmark_comparison.py  benchmark_geozarr.py  benchmark_tile_performance.py  cache_frames.py  change_storage_tier.py  cleanup_expired_items.py  convert.py  convert_egm2008_pgm_to_grd.py  convert_v0.py  convert_v1_s2.py  convert_v1_s3.py  create_geozarr_item.py  demo_exclude_ids.txt  ensure_dem.py  eodash_rasterform.py  eopf_cli.py  gen_aoi_tiles.py  get_conversion_params.py  get_zarr_url.py  ingest_v1_s1_rtc.py  list_tile_frames.py  metrics.py  migrate_s1_rtc_datamodel.py  migrate_s1_rtc_stac.py  prestage_source.py  preview_config.py  provision_source_cache_lifecycle.py  publish_amqp.py  query_stac.py  (+35 more)
stac/: S2A_MSIL2A_20250831T103701_N0511_R008_T31TFL_20250831T145420.json  S2A_MSIL2A_20250831T103701_N0511_R008_T31TFL_20250831T145420_new_gateway.json  S2A_MSIL2A_20250831T103701_N0511_R008_T31TFL_20250831T145420_with_alternate.json  sentinel-1-grd-rtc-acquisitions-staging.json  sentinel-1-grd-rtc-staging.json  sentinel-1-grd-rtc-tests.json  sentinel-2-l1c.json  sentinel-2-l2a-staging-codecs.json  sentinel-2-l2a-staging.json  sentinel-2-l2a.json  sentinel-3-olci-l1-efr-staging.json
tasks/: plan.md  todo.md
tests/: conftest.py  test_alternate_extension.py  test_consolidate_reflectance.py  test_fix_zarr_assets.py  test_s3_gateway.py  test_stac_collections.py
tests/fixtures/: README.md  stac_source_collection.json  stac_target_collection.json
tests/integration/: __init__.py  test_pipeline_e2e.py  test_stac_api.py  test_stac_put_idempotency.py
tests/unit/: __init__.py  conftest.py  test_aggregate_items.py  test_augment_stac_item.py  test_build_s1_rtc_collections.py  test_cache_frames.py  test_cache_warming.py  (+57 more)
workflows/: README.md  amqp-publish-once.yaml  amqp-publish-s1-e2e.yaml  amqp-publish-s1-test.yaml  eventsource.yaml  payload.json  rbac-staging.yaml  rbac.yaml  run-s1-test.yaml  sensor.yaml  template.yaml
(+55 files in other folders)
