[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "data-pipeline"
version = "1.10.0"
description = "Minimal event-driven Argo Workflows pipeline for Sentinel-2 GeoZarr conversion and STAC registration"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "EOPF Explorer", email = "info@eopf-explorer.eu" }]
keywords = ["geozarr", "stac", "sentinel", "earth-observation", "zarr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "pystac==1.14.3",
    "pystac-client==0.9.0",
    "httpx==0.28.1",
    "boto3==1.42.89",
    "xarray==2026.4.0",
    "zarr[cast-value-rs]>=3.2.1",
    "s3fs==2026.4.0",
    "click==8.4.1",
    "tenacity==9.1.4",
    "morecantile==7.0.3",
    "cf-xarray==0.11.2",
    "eopf-geozarr @ git+https://github.com/EOPF-Explorer/data-model.git@v0.10.1",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "ruff==0.15.17",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "types-boto3==1.43.28",
    "types-requests==2.33.0.20260518",
    "pip-audit==2.10.1",
]
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
]
notebooks = [
    "notebook==7.5.7",
    "ipykernel==7.3.0",
    "pandas==3.0.3",
    "matplotlib==3.11.0",
    "shapely==2.1.2",
    "python-dotenv==1.2.2",
]

[project.urls]
Homepage = "https://github.com/EOPF-Explorer/data-pipeline"
Repository = "https://github.com/EOPF-Explorer/data-pipeline"
Documentation = "https://github.com/EOPF-Explorer/data-pipeline#readme"

[tool.uv]
# Force transitive deps to their CVE-fixed releases (Dependabot/GHAS alerts).
# aiohttp (via aiobotocore/s3fs): GHSA-hg6j-4rv6-33pg / GHSA-jg22-mg44-37j8 fixed in 3.14.0.
# pillow (via matplotlib): 2 high + 3 moderate CVEs (FITS bomb, OOB write, ...) fixed in 12.2.0.
constraint-dependencies = ["aiohttp>=3.14.0", "pillow>=12.2.0"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["scripts", "operator-tools"] # Fix import resolution for tests
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use mocked external services)",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in event handlers)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # Unused function args in fixtures
    "S101", # Use of assert
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
# Mirror the pytest `pythonpath` so operator-tools modules resolve cross-directory
# imports from scripts/ (e.g. submit_storage_tier_workflows importing the shared
# tier predicate) regardless of which files are passed to mypy.
mypy_path = ["scripts", "operator-tools"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = ["examples/"]

# Relax type checking for test files (structure exists, tests to be added)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true
